# subair

./: Cargo.toml
assets/: player.glb  player_body.gltf
raw-assets/: player.blend  player_body.blend
src/: main.rs  player.rs
src/world/: generate.rs  kd_tree.rs  marching_cubes_tables.rs  mod.rs  normals.rs
subair-client/: Cargo.toml
subair-client/src/: main.rs  player.rs
subair-client/src/world/: generate.rs  kd_tree.rs  mod.rs
