[package]
name = "subair"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = "0.10.1"
bevy-inspector-egui = "0.18.3"
bevy_rapier3d = "0.21.0"
bracket-noise = "0.8.7"
futures-lite = "1.13.0"
tracing = "0.1.37"
